--- a/app/views/lyrics/index.haml
+++ b/app/views/lyrics/index.haml
@@ -3,5 +3,6 @@
 %ul
   %li= link_to "America Spoke Up", :controller => "/lyrics", :action => "AmericaSpokeUp"
   %li= link_to "Dashboard Lights", :controller => "/lyrics", :action => "DashboardLights"
+  %li= link_to "Goodbye Beautiful Day", :controller => "/lyrics", :action => "GoodbyeBeautifulDay"
   %li= link_to "Just For A Moment", :controller => "/lyrics", :action => "JustForAMoment"
   %li= link_to "Saint Mark's Square", :controller => "/lyrics", :action => "SaintMarksSquare"
