--- a/app/views/user_mailer/signup_notification.html.erb
+++ b/app/views/user_mailer/signup_notification.html.erb
@@ -1,8 +1,8 @@
-Your account has been created.
+Your Lunar Sway community account has been created!
 
   Username: <%= @user.login %>
   Password: <%= @user.password %>
 
-Visit this url to activate your account:
+Visit this url to activate your Lunar Sway community account!
 
   <%= @url %>
