--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -6,6 +6,7 @@
 @import links.css
 @import tour_dates.css
 @import photos.css
+@import wall.css
 
 body
   :background-color #000000
@@ -39,6 +40,15 @@ a.tiny_link
   :font-size 9px
   :text-decoration none
 
+.notice
+  :color green
+  :font-style italic
+  :font-weight bold
+.error
+  :color red
+  :font-style italic
+  :font-weight bold
+  
 .talignr
   :text-align right
 .talignl
