--- a/app/views/home/_logged_in.haml
+++ b/app/views/home/_logged_in.haml
@@ -5,6 +5,6 @@
     |
     = link_to "logout", logout_url
   - else
-    = link_to current_user.login, user_path(current_user)
+    = link_to current_user.login, my_community_url
     |
     = link_to "logout", logout_url
