--- a/public/stylesheets/sass/home.sass
+++ b/public/stylesheets/sass/home.sass
@@ -1,3 +1,9 @@
+.join_community
+  :font-size 85%
+  :font-weight bold
+  :color white
+  :margin-right 45px
+  
 .home_news
   :width 580px
   :float left
@@ -6,11 +12,11 @@
   /:background-color white
   /:filter alpha(opacity=5)
   /:-moz-opacity .5
-  :width 275px
+  :width 290px
   /:height 300px
   :background-image URL('/images/structure/bg.png')
   :border dotted #bbbbbb 2px
-  :padding 0px 10px 25px 15px
+  :padding 0px 5px 15px 10px
   .releases_content
     /:padding-left 5px
     /:position relative
