added gbd lyrics

--- a/app/views/lyrics/GoodbyeBeautifulDay.haml
+++ b/app/views/lyrics/GoodbyeBeautifulDay.haml
@@ -5,3 +5,53 @@
 .clear
 
 %p
+  Time just withers away
+  %br/ 
+  Stealing day after day 
+  %br/
+  The moon calls, the night falls
+  %br/
+  Goodbye beautiful day 
+
+%p
+  Seems time never can stay 
+  %br/
+  Just keeps running away 
+  %br/
+  The stars fly and hearts cry 
+  %br/
+  Leaving nothing left to say 
+
+%p
+  Goodbye beautiful day, I must be on my way 
+  %br/
+  Stop the rain and ease my pain
+  %br/
+  I'm sorry I can't stay 
+  %br/
+  Goodbye beautiful day, that's all I have to say 
+  %br/
+  Come tomorrow I'll be gone 
+  %br/
+  I'm sorry I can't stay 
+
+%p
+  Time always has a say
+  %br/
+  Slowly slipping away 
+  %br/
+  It's gone now but somehow 
+  %br/
+  There's no telling time today 
+
+%p
+  This time I'll go away 
+  %br/
+  And I'll be gone to stay 
+  %br/
+  We all know we will go 
+  %br/
+  That is all I have to say 
+
+%p
+  Goodbye beautiful day
