--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -32,7 +32,7 @@
           %span.song Just an Illusion
           = link_to "(lyrics)", {:controller => "/lyrics", :action => "JustAnIllusion"}, :class => "tiny_link"
         .embed
-          %embed{:src => "/swf/player.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/just_an_illusion.mp3&autostart=true"}
+          %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/just_an_illusion.mp3&autostart=true"}
       .lunar_release
         .title
           %span.date October 14th, 2008 -
