--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -39,7 +39,7 @@
           %span.song Goodbye Beautiful Day
           = link_to "(lyrics)", {:controller => "/lyrics", :action => "GoodbyeBeautifulDay"}, :class => "tiny_link"
         .embed
-          %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/goodbye_beautiful_day_lo.mp3&autostart=true"}
+          %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/goodbye_beautiful_day_lo.mp3&autostart=false"}
       .lunar_release
         .title
           %span.date September 15, 2008 -
