--- a/app/views/mailing_list_item_mailer/signup_notification_november.haml
+++ b/app/views/mailing_list_item_mailer/signup_notification_november.haml
@@ -3,7 +3,7 @@
   %a{:href => "http://www.lunarsway.com/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
   and
   %a{:href => "http://www.lunarsway.com/song_downloads/get/America Spoke Up"} “America Spoke Up.”
-%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Progress"
+%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Just an Illusion"
 
 %p We will definitely keep you in the loop on all things Lunar Sway!
 
