--- a/app/views/lyrics/Progress.haml
+++ b/app/views/lyrics/Progress.haml
@@ -23,7 +23,7 @@
   %br/
   And it's months since we've made love
   %br/
-  The winter snows and postcards, there's a mirror to catch the sun
+  The winter snow is in postcards and there's a mirror to catch the sun
   %br/
   Let's run away from all that we've done
   
