more front page stuff asdf

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,6 +1,6 @@
 
 .floatl{:style => "width: 570px;"}
-  %object{:width => 300, :height => 265}.floatl
+  %object.floatl{:width => 300, :height => 265}
     %param{:name => "movie", :value => "http://www.youtube.com/v/vNKT7F6OQL8&hl=en&fs=1&rel=0&color1=0x3a3a3a&color2=0x999999"}
     %param{:name => "allowFullScreen", :value => true}
     %param{:name => "allowscriptaccess", :value => "always"}
