new signup notification

--- a/app/views/mailing_list_item_mailer/signup_notification.haml
+++ b/app/views/mailing_list_item_mailer/signup_notification.haml
@@ -1,9 +1,31 @@
 %p
+  Thank you for signing the Lunar Sway mailing list!
+%p
   As token of appreciation to our first fans, here's a link to your free copy of our first two songs: 
   %a{:href => "http://www.lunarsway.com/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
   and
   %a{:href => "http://www.lunarsway.com/song_downloads/get/America Spoke Up"} “America Spoke Up.”
-%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Progress"
+
+%p We are currently in the studio recording our next batch of songs and are excited to get them to you!
+
+%p
+  June 12th we will be rocking the Dragonfly Nightclub in Hollywood! Check out our
+  = link_to "tour", "http://www.lunarsway.com/tour"
+  section for more info.
+
+%p
+  Be sure to check these Lunar Sway links often for new media and tour updates:
+  %ul
+    %li
+      website:
+      = link_to "http://www.lunarsway.com", "http://www.lunarsway.com"
+    %li
+      myspace:
+      = link_to "http://www.myspace.com/lunarsway", "http://www.myspace.com/lunarsway"
+    %li
+      facebook:
+      = link_to "http://www.facebook.com/pages/Lunar-Sway/51020740023", "http://www.facebook.com/pages/Lunar-Sway/51020740023"
+      
 
 %p We will definitely keep you in the loop on all things Lunar Sway!
 
