--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -4,75 +4,19 @@
   %head
     %title Lunar Sway Landing Site
     = stylesheet_link_tag "main"
-    = stylesheet_link_tag "community_wall"
-    = stylesheet_link_tag "tabs"
-    = yield :css_header
+    = yield :header_css
 
-    = javascript_include_tag "application"
-    = javascript_include_tag "jquery/jquery-1.2.6.min.js"
-    = javascript_include_tag "jquery/jquery.form.js"
-    = javascript_include_tag "jquery/jquery.dimensions.js"
-    = javascript_include_tag "jquery/jquery.shadow.js"
-    = javascript_include_tag "jquery/jquery.ifixpng.js"
-    = javascript_include_tag "jquery/jquery.fancyzoom-min.js"
-    = javascript_include_tag "jquery/jquery-ui-1.6rc2.packed.js"
-    = javascript_include_tag "swfobject.js"
-    = yield :js_header
+    = yield :header_js
     
   %body
-    #main_page
-      #main_header
-        .floatl= link_to image_tag("/images/structure/logo.png"), home_url
-        .mailing_list_join.floatr.talignr
-          .message
-            Join our
-            %span{:style => "color: red;"} Mailing List!
-          - form_tag mailing_list_items_path, :id => 'mailing_list_form' do
-            = text_field_tag "mailing_list_item[email]", "", :id => 'mailing_list_join'
-            = submit_tag "join!"
-          %div{:style => "margin-top: 5px;"}= render :partial => "/home/logged_in"
+    #main-nav
+      .content= render :partial => "/home/nav"
+      .clear
+    #main-page
+      .main-content
+        .facebook= link_to image_tag("/images/structure/facebook.png"), "http://www.facebook.com/pages/Lunar-Sway/51020740023", :target => "_blank"
+        .twitter= link_to image_tag("/images/structure/twitter.png"), "http://twitter.com/lunarsway", :target => "_blank"
+        .myspace= link_to image_tag("/images/structure/myspace.png"), "http://www.myspace.com/lunarsway", :target => "_blank"
+        .main-logo= image_tag "/images/structure/logo.jpg"
+        .content= @content_for_layout
         .clear
-      #main_nav
-        = link_to image_tag("/images/structure/nav/news.gif", :id => "nav_news"), news_url
-        = link_to image_tag("/images/structure/nav/downloads.gif", :id => "nav_downloads"), downloads_url
-        = link_to image_tag("/images/structure/nav/video.gif", :id => "nav_video"), videos_url
-        = link_to image_tag("/images/structure/nav/photos.gif", :id => "nav_photos"), photos_url
-        = link_to image_tag("/images/structure/nav/biography.gif", :id => "nav_biography"), biography_url
-        = link_to image_tag("/images/structure/nav/philosophy.gif", :id => "nav_philosophy"), philosophy_url
-        = link_to image_tag("/images/structure/nav/links.gif", :id => "nav_links"), links_url
-        = link_to image_tag("/images/structure/nav/tour.gif", :id => "nav_tour"), tour_url
-        = link_to image_tag("/images/structure/nav/lyrics.gif", :id => "nav_lyrics"), lyrics_url
-        = link_to image_tag("/images/structure/nav/blog.gif", :id => "nav_blog"), "http://lunarsway.blogspot.com", :target => "_blank"
-        = link_to image_tag("/images/structure/nav/store.gif", :id => "nav_store"), store_url
-        .clear
-      #main_content
-        #logged_in.talignr
-          /- unless logged_in?
-          /  .join_community
-          /    %span{:style => "color: red;"} New!
-          /    Become a member of the
-          /    %br/
-          /    = link_to "Lunar Sway Community!", join_community_url
-        #content_box
-          %div{:style => "padding-top: 10px;"}
-            - unless flash[:notice].nil? or flash[:notice].empty?
-              .notice= flash[:notice]
-            - unless flash[:error].nil? or flash[:error].empty?
-              .error= flash[:error]
-            = @content_for_layout
-        .floatr{:style => "padding-right: 60px; margin-top: 10px;"}
-          %span{:style => "color: red;"}
-            contact: 
-            = mail_to "info@lunarsway.com"
-        .clear
-  = javascript_tag "setupJoinMailingList();"
-  :plain
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      var pageTracker = _gat._getTracker("UA-4758466-1");
-      pageTracker._initData();
-      pageTracker._trackPageview();
-    </script>          
