--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -1,93 +1,49 @@
-#main_page
-  :width 1002px
+#main-nav
+  :width 1200px
+  :background-color #000000
   :margin-left auto
   :margin-right auto
-  :margin-top 50px
-  :margin-bottom 50px
-  
-  #main_header
-    :height 174px
-    :background-image URL('/images/structure/bg_header.jpg')
-    img
-      :margin-left 50px
-      :margin-top 70px
-      &:hover
-        :opacity .5
-    .mailing_list_join
-      :font-size 75%
-      :padding-top 70px
-      :padding-right 60px 
-      input
-        :font-size 100%
-        :border solid gray 1px
-        :padding 5px
-        :color #333333
-      .message
-        :font-size 125%
-        :color white
-        :text-align right
-        :font-weight bold
-        :margin-bottom 5px
-  #main_nav
-    :height 38px
-    :background-image URL('/images/structure/bg_nav.jpg')    
-    img#nav_news
-      :margin-left 50px
-      :margin-top 4px
+  :height 50px
+  .content
+    :float right
+    :margin-right auto
+    a
       :float left
-    img#nav_downloads
-      :margin-left 17px
-      :margin-top 3px
+      :display block
+    .spacer
       :float left
-    img#nav_video
-      :margin-left 17px
-      :margin-top 3px
-      :float left
-    img#nav_photos
-      :margin-left 17px
-      :margin-top 2px
-      :float left
-    img#nav_biography
-      :margin-left 19px
-      :margin-top 2px
-      :float left
-    img#nav_philosophy
-      :margin-left 19px
-      :margin-top 3px
-      :float left
-    img#nav_links
-      :margin-left 16px
-      :margin-top 1px
-      :float left
-    img#nav_tour
-      :margin-left 12px
-      :margin-top 0px
-      :float left
-    img#nav_lyrics
+      :width 25px
+      :height 15px
+#main-page
+  :width 1200px
+  :background-color #EAE2BD
+  :background-image url('/images/structure/page-bg.jpg')
+  :background-repeat no-repeat
+  :background-position 0px -20px
+  :margin-left auto
+  :margin-right auto
+  .main-content
+    :padding 15px
+    :height 650px
+    .facebook
+      :position absolute
+      :top 600px
+    .twitter
+      :position absolute
+      :top 665px
       :margin-left 15px
-      :margin-top 0px
-      :float left
-    img#nav_blog
-      :margin-left 17px 
-      :margin-top 1px
-      :float left
-    img#nav_store
-      :margin-left 15px 
-      :margin-top 0px
-      :float left
-  #main_content
-    :height 580px
-    :background-image URL('/images/structure/bg_content.jpg')    
-    :padding-top 10px
-    #content_box
-      :overflow-y auto
-      :height 440px
-      :padding 0px 5px 0px 55px
-      :margin-right 40px
-    .top_info
-      :margin-left auto
-      :margin-right auto
-      :width 890px
-    #logged_in
-      :padding 5px 0px 10px 0px
-      :text-align right
+    .myspace
+      :position absolute
+      :top 640px
+      :margin-left 200px
+    .main-logo
+      :top 0px
+      :left 585px
+      :position relative
+    .content
+      :position relative
+      :top 10px
+      :left 435px
+      :width 725px
+      
+      
