--- a/public/stylesheets/structure.css
+++ b/public/stylesheets/structure.css
@@ -1,92 +1,48 @@
-#main_page {
-  width: 1002px;
+#main-nav {
+  width: 1200px;
+  background-color: #000000;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px; }
-  #main_page #main_header {
-    height: 174px;
-    background-image: URL('/images/structure/bg_header.jpg'); }
-    #main_page #main_header img {
-      margin-left: 50px;
-      margin-top: 70px; }
-      #main_page #main_header img:hover {
-        opacity: .5; }
-    #main_page #main_header .mailing_list_join {
-      font-size: 75%;
-      padding-top: 70px;
-      padding-right: 60px; }
-      #main_page #main_header .mailing_list_join input {
-        font-size: 100%;
-        border: solid gray 1px;
-        padding: 5px;
-        color: #333333; }
-      #main_page #main_header .mailing_list_join .message {
-        font-size: 125%;
-        color: white;
-        text-align: right;
-        font-weight: bold;
-        margin-bottom: 5px; }
-  #main_page #main_nav {
-    height: 38px;
-    background-image: URL('/images/structure/bg_nav.jpg'); }
-    #main_page #main_nav img#nav_news {
-      margin-left: 50px;
-      margin-top: 4px;
-      float: left; }
-    #main_page #main_nav img#nav_downloads {
-      margin-left: 17px;
-      margin-top: 3px;
-      float: left; }
-    #main_page #main_nav img#nav_video {
-      margin-left: 17px;
-      margin-top: 3px;
-      float: left; }
-    #main_page #main_nav img#nav_photos {
-      margin-left: 17px;
-      margin-top: 2px;
-      float: left; }
-    #main_page #main_nav img#nav_biography {
-      margin-left: 19px;
-      margin-top: 2px;
-      float: left; }
-    #main_page #main_nav img#nav_philosophy {
-      margin-left: 19px;
-      margin-top: 3px;
-      float: left; }
-    #main_page #main_nav img#nav_links {
-      margin-left: 16px;
-      margin-top: 1px;
-      float: left; }
-    #main_page #main_nav img#nav_tour {
-      margin-left: 12px;
-      margin-top: 0px;
-      float: left; }
-    #main_page #main_nav img#nav_lyrics {
-      margin-left: 15px;
-      margin-top: 0px;
-      float: left; }
-    #main_page #main_nav img#nav_blog {
-      margin-left: 17px;
-      margin-top: 1px;
-      float: left; }
-    #main_page #main_nav img#nav_store {
-      margin-left: 15px;
-      margin-top: 0px;
-      float: left; }
-  #main_page #main_content {
-    height: 580px;
-    background-image: URL('/images/structure/bg_content.jpg');
-    padding-top: 10px; }
-    #main_page #main_content #content_box {
-      overflow-y: auto;
-      height: 440px;
-      padding: 0px 5px 0px 55px;
-      margin-right: 40px; }
-    #main_page #main_content .top_info {
-      margin-left: auto;
-      margin-right: auto;
-      width: 890px; }
-    #main_page #main_content #logged_in {
-      padding: 5px 0px 10px 0px;
-      text-align: right; }
+  height: 50px; }
+  #main-nav .content {
+    float: right;
+    margin-right: auto; }
+    #main-nav .content a {
+      float: left;
+      display: block; }
+    #main-nav .content .spacer {
+      float: left;
+      width: 25px;
+      height: 15px; }
+
+#main-page {
+  width: 1200px;
+  background-color: #EAE2BD;
+  background-image: url('/images/structure/page-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: 0px -20px;
+  margin-left: auto;
+  margin-right: auto; }
+  #main-page .main-content {
+    padding: 15px;
+    height: 650px; }
+    #main-page .main-content .facebook {
+      position: absolute;
+      top: 600px; }
+    #main-page .main-content .twitter {
+      position: absolute;
+      top: 665px;
+      margin-left: 15px; }
+    #main-page .main-content .myspace {
+      position: absolute;
+      top: 640px;
+      margin-left: 200px; }
+    #main-page .main-content .main-logo {
+      top: 0px;
+      left: 585px;
+      position: relative; }
+    #main-page .main-content .content {
+      position: relative;
+      top: 10px;
+      left: 435px;
+      width: 725px; }
