--- a/app/views/admin/home/index.haml
+++ b/app/views/admin/home/index.haml
@@ -1,4 +1,7 @@
 %p.title Lunar Sway Admin Panel
 
 %ul
+  %li= link_to "Manage News Items", admin_news_items_url
+  %li= link_to "Manage Photos", admin_photos_url
+  %li= link_to "Manage Tour Dates", admin_tour_dates_url
   %li= link_to "Manage Videos", admin_you_tube_videos_url
