--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -3,10 +3,16 @@
   :background-color #000000
   :margin-left auto
   :margin-right auto
-  :height 50px
+  :height 60px
+  :color white
+  .mailing-list
+    :float left
+    :padding-top 10px
+    :width 400px
   .content
     :float right
     :margin-right auto
+    :padding-top 10px
     a
       :float left
       :display block
@@ -24,7 +30,7 @@
   :margin-right auto
   .main-content
     :padding 15px
-    :height 650px
+    :min-height 650px
     .facebook
       :position absolute
       :top 600px
@@ -45,5 +51,8 @@
       :top 10px
       :left 435px
       :width 725px
+      .logged-in
+        :text-align right
+        :margin-bottom 10px
       
       
