--- a/app/views/admin/tour_dates/new.haml
+++ b/app/views/admin/tour_dates/new.haml
@@ -1,13 +1,16 @@
-%h1 New Tour Date
+%p.title New Tour Date
 
 = error_messages_for :tour_date
 
-- form_for(@tour_date) do |f| 
+- form_for(@tour_date, :url => admin_tour_dates_url) do |f| 
   %p
     %b Title
     %br/
     = f.text_field :title, :class => "text"
-
+  %p
+    %b Show Date
+    %br/
+    = f.text_field :show_date, :class => "text", :id => "show-date"
   %p
     %b Location
     %br/
@@ -36,4 +39,13 @@
   %p
     = f.submit "Create"
 
-= link_to 'Back to Tour Dates', tour_dates_path
+- content_for :header_css do
+  = stylesheet_link_tag "datepicker"
+
+- content_for :header_js do
+  = javascript_include_tag "jquery-1.3.2.min.js"
+  = javascript_include_tag "jquery-ui-1.7.1.custom.min.js"
+  :javascript
+    $(function() {
+      $('#show-date').datepicker();
+    });
