--- a/app/views/media/index.haml
+++ b/app/views/media/index.haml
@@ -6,13 +6,31 @@
   .you-tube-video= video.embed_code
 .clear
   
-%p.subtitle Gallery
+.gallery
+  .subtitle Gallery
+  - for photo in Photo.all_ordered
+    .photo= link_to image_tag(photo.public_path(:thumbnail => {:size => "100x100", :crop => true})), photo.public_path(:thumbnail => {:size => "640x480"})
+  .clear
+
+- content_for :header_js do
+  = javascript_include_tag "jquery-1.3.2.min.js"
+  = javascript_include_tag "lightbox/js/jquery.lightbox-0.5.js"
+  :javascript
+    $(function() {
+      $('.photo a').lightBox();
+    });
 
 
 - content_for :header_css do
+  = stylesheet_link_tag "jquery.lightbox-0.5"
   %style{:type => "text/css"}
     :sass
       .you-tube-video
         :float left
-        :margin-right 35px
-        :margin-bottom 20px
+        :margin-bottom 10px
+        :margin-right 25px
+      .gallery
+        :margin-top 15px
+        .photo
+          :float left
+          :margin 10px
