--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,4 +1,4 @@
-%embed{:src => "mp3player/player-viral.swf", :width => "720", :height => "200", :allowscriptaccess => "always", :allowfullscreen => "false", :flashvars => "file=mp3player/playlist.xml&playlist=bottom&controlbar=bottom"}/
+%embed{:src => "mp3player/player-viral.swf", :width => "100%", :height => "200", :allowscriptaccess => "always", :allowfullscreen => "false", :flashvars => "file=mp3player/playlist.xml&playlist=bottom&controlbar=bottom"}/
 
 .news-items
   %p.title Latest News
@@ -27,7 +27,7 @@
   %style{:type => "text/css"}
     :sass
       .news-items
-        :width 425px
+        :width 465px
         :float left
         .news-item
           .title
@@ -42,10 +42,10 @@
       .upcoming-shows
         :text-align right
         :float left
-        :width 295px
+        :width 255px
         :padding-left 5px
         .tour-date
           :margin-bottom 15px
           .venue
             a
-              :font-size 16px
+              :font-size 13px
