fixed tour date stuff

--- a/public/stylesheets/news_item.css
+++ b/public/stylesheets/news_item.css
@@ -26,5 +26,4 @@
   .news_item_show .posted_by {
     font-size: 75%; }
   .news_item_show .body {
-    padding: 10px 0px 0px 15px;
-    font-size: 50%; }
+    padding: 10px 0px 0px 15px; }
