tour date stuff

--- a/app/views/admin/tour_dates/edit.haml
+++ b/app/views/admin/tour_dates/edit.haml
@@ -16,6 +16,11 @@
     %br/
     = f.text_field :show_date, :class => "text", :id => 'show-date'
 
+  %p  
+    %b Show Time
+    %br/
+    = f.text_field :doors_open, :class => "text"
+
   %p
     %b Location
     %br/
