added google analytics back

--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -23,3 +23,11 @@
           .logged-in= render :partial => "/home/logged_in"
           = @content_for_layout
         .clear
+
+  :javascript
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
+    var pageTracker = _gat._getTracker("UA-4758466-1");
+    pageTracker._initData();
+    pageTracker._trackPageview();
